--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^5.1.8",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
