--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
+    "animate.css": "^4.1.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-animated-slider": "^2.0.0",
